<resources>
    <string name="app_name">뷰 맛집</string>
    <string name="log_username">Username</string>
    <string name="log_password">Password</string>
    <string name="account_nickname">Nickname</string>
    <string name="account_createBtn">Create Now</string>
    <string name="account_account">회원 가입</string>
    <string name="log_loginBtn">Login Now</string>
    <string name="log_get_account">Get Account</string>
    <string name="log_autologin">AutoLogin</string>
    <string name="cb_txt1">글 작성</string>
    <string name="cb_txt2">태그 추가</string>
    <string name="cb_backBtn">back</string>
    <string name="cb_locationBtn">add location</string>
    <string name="cb_checkBtn">create gallery</string>
    <string name="cb_photoIv">photo</string>
    <string name="cb_titleEt">제목...</string>
    <string name="cb_contEt">내용</string>
    <string name="cb_hashActv">해시 태그</string>
    <string name="cb_locationEt">위치...</string>
    <string name="bm_backBtn">go back</string>
    <string name="bm_checkBtn">get location</string>
    <string name="bm_locationBtn">now location</string>
    <string name="bm_locationEt">현재 위치</string>
    <string name="bm_mappinIv">map pin</string>
    <string name="iig_username">유저명</string>
    <string name="iig_title">제목</string>
    <string name="iig_cont">내용</string>
    <string name="iig_comment">댓글</string>
    <string name="iig_like1">김철수</string>
    <string name="iig_like2"> 외</string>
    <string name="iig_like3">0</string>
    <string name="iig_like4">명이 좋아합니다.</string>
    <string name="iig_heartBtn">give love</string>
    <string name="iig_commentBtn">go comment</string>
    <string name="iig_mapBtn">go map</string>
    <string name="iig_settingBtn">setting</string>
    <string name="iig_profileIv">profile</string>
    <string name="iig_photoIv">photo</string>
    <string name="comm_profleIv">photo</string>
    <string name="comm_commentTv">댓글입니다.</string>
    <string name="comm_profileTv">프로필입니다.</string>
    <string name="mg_backBtn">go back</string>
    <string name="mg_locationBtn">now location</string>
    <string name="mg_searchEt">검색</string>
    <string name="bs_txt1">글 작성</string>
    <string name="bs_txt2">태그 추가</string>
    <string name="bs_backBtn">back</string>
    <string name="bs_locationBtn">add location</string>
    <string name="bs_checkBtn">create gallery</string>
    <string name="bs_photoIv">photo</string>
    <string name="bs_titleEt">제목...</string>
    <string name="bs_contEt">내용</string>
    <string name="bs_hashActv">해시 태그</string>
    <string name="bs_locationEt">위치...</string>
    <string name="bl_logo">ViewMatZip</string>
    <string name="comment_btnTv"><b>작성</b></string>
    <string name="comment_textEt"><b>댓글을 입력해주세요.</b></string>
    <string name="bpi_image">iamges</string>
    <string name="sf_searchEt">장소를 검색해주세요</string>
    <string name="iis_searchTv">검색된 장소</string>
    <string name="profile_settingBtn">설정</string>
    <string name="profile_editBtn">프로필 편집</string>
    <string name="profile_loginBtn">Login Now</string>
    <string name="profile_nickTv">별명</string>
    <string name="edit_tb">프로필 편집</string>
    <string name="edit_photo">프로필 사진</string>
    <string name="edit_btn">편집</string>
    <string name="edit_status">상태 메세지</string>
    <string name="edit_status_message">지금의 기분을 설명해주세요</string>
    <string name="edit_nickname">별명</string>
    <string name="option_menu1">로그아웃</string>
    <string name="board_delete">삭제하기</string>
    <string name="board_update">수정하기</string>
    <string name="board_report">신고하기</string>
    <string name="comm_moveCo_comm">답글 달기</string>

</resources>