<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ubl_profileIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iig_profileIv"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ubl_idTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/iig_username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ubl_profileIv"
        app:layout_constraintTop_toTopOf="@+id/ubl_profileIv" />

    <TextView
        android:id="@+id/ubl_titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/iig_title"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/ubl_profileIv"
        app:layout_constraintTop_toBottomOf="@+id/ubl_idTv" />

    <Button
        android:id="@+id/ubl_mapBtn"
        android:layout_width="37dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_map"
        android:contentDescription="@string/iig_mapBtn"
        app:layout_constraintBottom_toTopOf="@+id/ubl_photoVP"
        app:layout_constraintEnd_toStartOf="@+id/ubl_settingBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ubl_settingBtn"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_baseline_more_vert_24"
        android:contentDescription="@string/iig_settingBtn"
        app:layout_constraintBottom_toTopOf="@+id/ubl_photoVP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/ubl_photoVP"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iig_photoIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubl_profileIv"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />

    <TextView
        android:id="@+id/ubl_idTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/iig_username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ubl_photoVP"
        app:layout_constraintTop_toBottomOf="@+id/ubl_photoVP" />

    <TextView
        android:id="@+id/ubl_contIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/iig_cont"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ubl_idTv2"
        app:layout_constraintStart_toEndOf="@+id/ubl_idTv2" />

    <TextView
        android:id="@+id/ubl_commentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/iig_comment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/ubl_heartBtn"
        app:layout_constraintTop_toBottomOf="@+id/ubl_heartBtn" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/ubl_heartLav"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ubl_heartBtn"
        app:layout_constraintEnd_toEndOf="@+id/ubl_heartBtn"
        app:layout_constraintStart_toStartOf="@+id/ubl_heartBtn"
        app:layout_constraintTop_toTopOf="@+id/ubl_heartBtn"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/heart_pop" />

    <View
        android:id="@+id/ubl_heartTouch"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/ubl_heartLav"
        app:layout_constraintEnd_toEndOf="@+id/ubl_heartLav"
        app:layout_constraintStart_toStartOf="@+id/ubl_heartLav"
        app:layout_constraintTop_toTopOf="@+id/ubl_heartLav" />

    <Button
        android:id="@+id/ubl_heartBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/heart"
        android:contentDescription="@string/iig_heartBtn"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubl_idTv2"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/ubl_commentBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/comment"
        android:contentDescription="@string/iig_commentBtn"
        app:layout_constraintBaseline_toBaselineOf="@+id/ubl_heartBtn"
        app:layout_constraintStart_toEndOf="@+id/ubl_heartBtn"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/ubl_likeTv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:text="@string/iig_like1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/ubl_likeTv2"
        app:layout_constraintTop_toBottomOf="@+id/ubl_contIv" />

    <TextView
        android:id="@+id/ubl_likeTv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/iig_like2"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/ubl_likeTv1"
        app:layout_constraintEnd_toStartOf="@+id/ubl_likeTv3" />

    <TextView
        android:id="@+id/ubl_likeTv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:text="@string/iig_like3"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/ubl_likeTv2"
        app:layout_constraintEnd_toStartOf="@+id/ubl_likeTv4" />

    <TextView
        android:id="@+id/ubl_likeTv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/iig_like4"
        android:textColor="@color/black"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/ubl_likeTv3"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ubl_commentRv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@android:color/darker_gray"
        android:scrollbars="vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ubl_commentTv" />

</androidx.constraintlayout.widget.ConstraintLayout>