<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/bm_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <EditText
        android:id="@+id/bm_locationEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/login_et"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/cb_locationEt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="55dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3A3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/bm_backBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start|top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_shortcut_arrow_back"
        android:contentDescription="@string/bm_backBtn" />

    <Button
        android:id="@+id/bm_checkBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_shortcut_check"
        android:layout_gravity="end|top"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bm_checkBtn" />

    <Button
        android:id="@+id/bm_locationBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/ic_shortcut_my_location"
        android:contentDescription="@string/bm_locationBtn" />

    <ImageView
        android:id="@+id/bm_mappinIv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/bm_mappinIv"
        app:srcCompat="@drawable/map_pin" />

</FrameLayout>