<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_Cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editTb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/edit_backBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="start"
            android:background="@drawable/ic_baseline_arrow_back_24"
            android:backgroundTint="#000000"
            android:contentDescription="@string/cb_backBtn"
            android:onClick="goBack"
            tools:ignore="SpeakableTextPresentCheck,UsingOnClickInXml"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/edit_txt1Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/edit_tb"
            android:textColor="#000000"
            android:textSize="23sp"
            android:textStyle="bold"
            android:onClick="setPhoto"
            tools:layout_editor_absoluteX="74dp"
            tools:layout_editor_absoluteY="13dp"
            tools:ignore="UsingOnClickInXml" />


        <Button
            android:id="@+id/edit_checkBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_baseline_check_24"
            android:backgroundTint="#000000"
            android:contentDescription="@string/cb_checkBtn" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/edit_nickTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_photo"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTb" />

    <Button
        android:id="@+id/edit_settingBtn"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/profile_btn"
        android:fontFamily="@font/quantico"
        android:text="@string/edit_btn"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/edit_nickTv"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/edit_photoIv"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/cb_photoIv"
        android:onClick="setPhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_nickTv"
        app:srcCompat="@drawable/user"
        tools:ignore="UsingOnClickInXml" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:background="#A3A3A3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_photoIv" />

    <TextView
        android:id="@+id/edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_status"
        android:textColor="#000000"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/edit_status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_status_message"
        android:textColor="#999999"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_status"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>