<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bs_Cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_round">

    <View
        android:layout_width="80dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/view_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bs_locationBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_add_location_24"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/bs_locationBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <Button
        android:id="@+id/bs_checkBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/ic_baseline_check_24"
        android:backgroundTint="#000000"
        android:contentDescription="@string/bs_checkBtn"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bs_txt1Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/bs_txt1"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bs_tvt2Tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/bs_txt2"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bs_contEt" />

    <ImageView
        android:id="@+id/bs_photoIv"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/bs_photoIv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal_background" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="365dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="60dp" />

    <EditText
        android:id="@+id/bs_titleEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#8A8A8A"
        android:ems="10"
        android:hint="@string/bs_titleEt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#9C9C9C"
        app:layout_constraintStart_toEndOf="@+id/bs_photoIv"
        app:layout_constraintTop_toTopOf="@+id/bs_photoIv"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/bs_contEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#8A8A8A"
        android:ems="10"
        android:hint="@string/bs_contEt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="#9C9C9C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/bs_photoIv"
        app:layout_constraintTop_toBottomOf="@+id/bs_photoIv"
        tools:ignore="TextContrastCheck" />

    <MultiAutoCompleteTextView
        android:id="@+id/bs_hashActv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#8A8A8A"
        android:hint="@string/bs_hashActv"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3A3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bs_tvt2Tv"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/bs_locationEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#8A8A8A"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/bs_locationEt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3A3"
        app:layout_constraintBaseline_toBaselineOf="@+id/bs_locationBtn"
        app:layout_constraintStart_toEndOf="@+id/bs_locationBtn"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>