<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mg_map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <EditText
        android:id="@+id/mg_locationEt"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="86dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_et"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/mg_searchEt"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="55dp"
        android:paddingHorizontal="16dp"
        android:textColor="@color/black"
        android:textColorHint="#A3A3A3"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/mg_backBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="start|top"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/ic_shortcut_arrow_back"
        android:onClick="goBack"
        android:contentDescription="@string/mg_backBtn"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/mg_locationBtn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/ic_shortcut_my_location"
        android:contentDescription="@string/mg_locationBtn" />

</FrameLayout>